[package]
name = "game-orbits"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = {version="0.15.2", optional=true}
godot = {version="0.2.3", optional=true}
nalgebra = "*"
num-traits = "*"

[dev-dependencies]
bevy = {version="0.15.1", features=["jpeg"]}
approx = "*"

[features]
bevy = ["dep:bevy"]
godot = ["dep:godot"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

